# density-mesh

./: Cargo.toml  LICENSE  README.md
density-mesh-cli/: Cargo.toml
density-mesh-cli/src/: cli.rs  main.rs
density-mesh-core/: Cargo.toml
density-mesh-core/src/: coord.rs  generator.rs  lib.rs  live.rs  map.rs  triangle.rs  utils.rs
density-mesh-core/src/generator/: mod.rs  process_status.rs  processing_change.rs
density-mesh-core/src/mesh/: mod.rs  points_separation.rs  settings.rs
density-mesh-image/: Cargo.toml
density-mesh-image/src/: lib.rs  settings.rs
density-mesh-playground/: Cargo.toml
density-mesh-playground/src/: main.rs
resources/: logo.json  logo.pretty.json  logo.yaml
