[package]
name = "density-mesh-cli"
version = "1.3.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "CLI app for density mesh generator"
license = "MIT"
homepage = "https://github.com/PsichiX/density-mesh"
repository = "https://github.com/PsichiX/density-mesh"
documentation = "https://docs.rs/density-mesh-cli"
readme = "../README.md"

[[bin]]
name = "density-mesh"
path = "./src/main.rs"

[dependencies]
density-mesh-core = { version = "1.3", path = "../density-mesh-core", features = ["parallel"] }
density-mesh-image = { version = "1.3", path = "../density-mesh-image" }
serde_json = "1"
serde_yaml = "0.8"
obj-exporter = "0.2"
clap = "2.23"
image = { default-features = false, features = ["png"], version = "0.23" }
