[package]
name = "density-mesh-image"
version = "1.5.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2021"
description = "Image module for density mesh generator"
license = "MIT"
homepage = "https://github.com/PsichiX/density-mesh"
repository = "https://github.com/PsichiX/density-mesh"
documentation = "https://docs.rs/density-mesh-image"
readme = "../README.md"

[features]
parallel = ["density-mesh-core/parallel"]

[dependencies]
serde = { version = "1", features = ["derive"] }
density-mesh-core = { version = "1.3", path = "../density-mesh-core" }
image = { default-features = false, features = ["png"], version = "0.24" }
