[package]
name = "density-mesh-playground"
version = "1.4.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
minifb = "0.19"
density-mesh-core = { path = "../density-mesh-core", version = "1.3", features = ["parallel"] }
image = { default-features = false, features = ["png"], version = "0.23" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
